# wirehair

./: .gitignore  .gitmodules  0m50ejfiriuhgrajsj4aftfkmnefkdhs  AGENTS.md  CLAUDE.md  CMakeLists.txt  Clock.cpp  Clock.hpp  Config.hpp  DOLT_REMOTE.md  GF2Matrix.cpp  GF2Matrix.hpp  HANDOFF_PRECODE_REGEN_20260710.md  LEGACY_WIRE_PROFILES.md  Makefile  Platform.hpp  README  README.md  SmallPRNG.hpp  Tester.cpp  V2_WIRE_PROFILE.md  Wirehair.cpp  Wirehair.hpp  WirehairCodec.cpp  WirehairCodec.h  WirehairCompiler.h  WirehairDecoder.cpp  WirehairDenseFixups.inc  WirehairDetails.hpp  WirehairEncoder.cpp  WirehairEnvironment.h  WirehairHeavy.h  WirehairPeelFixups.inc  WirehairTools.cpp  WirehairTools.h  WirehairUtil.cpp  WirehairUtil.hpp  gf256.cpp  gf256.h  libwirehair.sln  (+10 more)
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
StructuralTest/: GF256Matrix.cpp  GF2Matrix.cpp  GF2Matrix.hpp  StructuralTest.cpp  StructuralTest.vcxproj  StructuralTest.vcxproj.filters
_attic_/: GF2Matrix.cpp  GF2Matrix.hpp
abi/: wirehair.map
bench/: WH2_CROSS_PAYLOAD_RECOVERY.md  build.sh  drive_seedsearch.sh  gen_fixups.sh  gen_fixups2.sh  render_untuned_pareto_html.py  test_verify_fix.sh  test_whx.sh  validate_seedsearch.sh  verify_fix.sh  wh2_cross_payload_recovery.py  wh2_cross_payload_recovery_test.py  wh2_degree_balanced_allk_campaign.py  wh2_degree_balanced_allk_campaign_receipt.json  wh2_degree_balanced_allk_result.json  wh2_degree_balanced_timing.py  wh2_degree_balanced_timing_result.json  wh2_degree_balanced_timing_test.py  wh2_degree_socket_dev_result.json  wh2_drand_verify.cjs  wh2_gfbreaker_tail_allk.py  wh2_gfbreaker_tail_anchored_screen.py  wh2_grouped_row_mask_campaign.py  wh2_h15_v5_holdout_analyze.py  wh2_h15_v5_holdout_job.sh  wh2_h15_v5_holdout_launch.sh  wh2_h15_v5_holdout_performance.py  wh2_h15_v5_holdout_pre_reveal_seal.sha256  wh2_h15_v5_holdout_prepare.py  wh2_h15_v5_salt_job.sh  wh2_h15_v5_salt_launch.sh  wh2_h15_v5_salt_search.py  wh2_h15_v5_selection_analyze.py  wh2_h15_v5_selection_job.sh  wh2_h15_v5_selection_launch.sh  wh2_h15_v5_selection_prepare.py  wh2_lazy_solve_timing.py  wh2_lazy_solve_timing_test.py  wh2_p32_dispatch_timing.py  wh2_p32_dispatch_timing_test.py  (+24 more)
ci/: README.md  python_native_test.py  python_package_test.py  run_ci.py  run_portability.py  test_run_ci.py  test_run_portability.py
cmake/: wirehair.pc.in  wirehairConfig.cmake.in
codec/: CMakeLists.txt  GF16MixedTest.cpp  PayloadIndependentSeedingTest.cpp  PolicyTest.cpp  PrecodeDecodeTest.cpp  PrecodeEncodeTest.cpp  PrecodeRoundTripTest.cpp  PrecodeSeedSelectionTest.cpp  PrecodeSolveTest.cpp  PrecodeTest.cpp  README.md  V2BenchCliTest.cmake  V2BenchNoPreferredCliTest.cmake  V2FingerprintTest.cpp  V2NoInitTest.cpp  V2PacketGoldenTest.cpp  V2ProfileTest.cpp  V2ResumeBench.cpp  V2TinyDenseOracle.cpp  V2TinyDenseOracle.h  V2TransactionalTest.cpp  WirehairV2Bench.cpp  WirehairV2Codec.cpp  WirehairV2Codec.h  WirehairV2Fingerprint.cpp  WirehairV2Fingerprint.h  WirehairV2GF16.cpp  WirehairV2GF16.h  WirehairV2MixedBuckets.h  WirehairV2Peel.cpp  WirehairV2Peel.h  WirehairV2Plan.cpp  WirehairV2Plan.h  WirehairV2Policy.cpp  WirehairV2Policy.h  WirehairV2Precode.cpp  WirehairV2Precode.h  WirehairV2PrecodeDecode.cpp  WirehairV2PrecodeDecode.h  WirehairV2PrecodeEncode.cpp  (+6 more)
codec/fuzz/: README.md  V2FuzzDriver.cpp  V2FuzzDriver.h  V2ProfileFuzz.cpp  V2StatefulFuzz.cpp
codec/fuzz/corpus/profile/: boundaries.seed  manifest.txt  oracle.seed  packet.seed  params.seed  profile.seed  system.seed
codec/fuzz/corpus/stateful/: duplicates.seed  general.seed  manifest.txt  oom-retry.seed  post-complete.seed  profile-retry.seed  reuse.seed
codec_source/: AbyssinianPRNG.hpp  CatsChoice.hpp  Config.hpp  EndianNeutral.cpp  EndianNeutral.hpp  Platform.hpp  SmallPRNG.hpp  WIREHAIR.LICENSE  Wirehair.cpp  Wirehair.hpp  WirehairDetails.hpp  memxor.cpp  memxor.hpp
crs/: CauchyTables.inc  cauchy.cpp
docs/: GF256Matrix.hpp  GF2Matrix.cpp  heatmap.gnu
experiments/: ByteLedger.h  SESSION_PLAN_2026-06-10.md  test_byte_metrics.sh  test_validate_byte_metrics.py  test_wh2_thermal_runner.sh  v2_packet_eval_bench.cpp  validate_byte_metrics.py  wh2_thermal_runner.sh
include/: wirehair.h
msvc2010/: libwirehair.vcxproj  libwirehair.vcxproj.filters
proj/: GenerateDenseCount.vcxproj  GenerateDenseCount.vcxproj.filters  GenerateMostDenseSeeds.vcxproj  GenerateMostDenseSeeds.vcxproj.filters  GeneratePeelSeeds.vcxproj  GeneratePeelSeeds.vcxproj.filters  GenerateSmallDenseSeeds.vcxproj  GenerateSmallDenseSeeds.vcxproj.filters  TableGenerators.vcxproj  TableGenerators.vcxproj.filters  UnitTest.vcxproj  UnitTest.vcxproj.filters  wirehair.sln  wirehair.vcxproj  wirehair.vcxproj.filters
python/: README.md  benchmark_buffers.py  test_whirehair.py  whirehair.py
results/: untuned_pareto_screen.html
src/: wirehair.cpp  wirehair_codec.cpp  wirehair_codec.hpp  wirehair_codec_16.cpp  wirehair_codec_16.hpp  wirehair_codec_8.cpp  wirehair_codec_8.hpp
tables/: AtomicResultFile.h  GenerateDenseCount.cpp  GenerateMostDenseSeeds.cpp  GeneratePeelSeeds.cpp  GenerateSmallDenseSeeds.cpp  HEAVY_MATRIX.md  HeavyRowGenerator.cpp  HeavyRowGenerator.h  PeelSelectionPolicy.h  SeedSelectionPolicy.h  TableGenerator.cpp  aggregate_dense_count_shards.sh  apply_fixup_holdout_ledger.py  apply_regeneration_results.py  atomic_publish.py  compare_dense_count_shards.sh  dense.csv  dense2.csv  dense3.csv  dense_count_validate.py  derive_dense_count_candidate.sh  fixup_holdout_ledger.py  regeneration_results.py  run_full_regeneration.sh  run_regeneration_slice.sh  test_apply_fixup_holdout_ledger.py  test_apply_regeneration_results.py  test_dense_count_validate.py  test_fixup_holdout_ledger.py  test_heavy_matrix_docs.py  test_heavy_matrix_generator.sh  test_regeneration_results.py
test/: AllocationOverflowTest.cpp  AtomicResultFileTest.cpp  ExpectFailure.cmake  GF256InPlaceTest.cpp  HeavyWindowTest.cpp  LargeMessageTest.cpp  (+11 more)
test/package/: CMakeLists.txt  RunPackageE2E.cmake  consumer.c  consumer.cpp  plugin.c  plugin_host.c  roundtrip.c  roundtrip.h
(+137 files in other folders)
